# Bingit

./: .gitignore  CMakeLists.txt  README.txt  integration.sh  integration_proxy.sh  thread_integration.sh
cmake/: Findsqlite3.cmake
configs/: 8080_config  8080_config_new  8880_config  my_config  my_config_new  new_api_config
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: 404_handler.h  bad_request_handler.h  config_params.h  config_parser.h  config_var.h  echo_handler.h  echo_request_handler.h  handler.h  handler_manager.h  health_handler.h  meme_handler.h  proxy_handler.h  reply.h  request.h  request_handler.h  server.h  session.h  static_handler.h  static_request_handler.h  status_handler.h
integration/: edit_meme_response  list_after_delete_meme_response  list_meme_response  new_meme_response  refresh_meme_responses.sh  search_meme_response  view_meme_response
integration/meme/: edit.html  new.html
src/: 404_handler.cc  bad_request_handler.cc  config_params.cc  config_parser.cc  echo_handler.cc  echo_request_handler.cc  handler.cc  handler_manager.cc  health_handler.cc  meme_handler.cc  proxy_handler.cc  reply.cc  request.cc  request_handler.cc  server.cc  server_main.cc  session.cc  static_handler.cc  static_request_handler.cc  status_handler.cc
static/: index.html  test.txt
static_roots/meme/: new.html
static_roots/static2/: index.html
tests/: config_parser_test.cc  curloutput_expected  ends_with_double_quote_config  ends_with_single_quote_config  extra_end_brace_config  handler_test.cc  meme_config  meme_handler_test.cc  new.html  non_number_port_config  open_block_config  open_bracer_not_on_own_line_config  open_context_config  proxy_handler_test.cc  request_handler_test.cc  server_test.cc  session_test.cc  single_context_config  status_handler_test.cc  whitespace_only_config
